config/platform/shared-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: gateway-system
spec:
  gatewayClassName: envoy

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"

    - name: keycloak-https
      hostname: auth.ai-platform.local
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: auth-ai-platform-local-tls

      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"

    - name: platform-api-https
      hostname: api.ai-platform.local
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: api-ai-platform-local-tls

      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"

    - name: fraud-model-https
      hostname: fraud-model.local
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: fraud-model-local-tls
            
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
